--- a/lib/glfw/docs/moving.dox
+++ b/lib/glfw/docs/moving.dox
@@ -220,7 +220,7 @@ A user attempting to close a window is now just an event like any other.  Unlike
 GLFW 2, windows and contexts created with GLFW 3 will never be destroyed unless
 you choose them to be.  Each window now has a close flag that is set to
 `GLFW_TRUE` when the user attempts to close that window.  By default, nothing else
-happens and the window stays visible.  It is then up to you to either destroy
+happens and the window stays visible.  It is then up to you to either destroyForRecreate
 the window, take some other action or ignore the request.
 
 You can query the close flag at any time with @ref glfwWindowShouldClose and set
